--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ sudo: false
 
 os: linux
 
+addons:
+  chrome: stable
+
 env:
   global:
     - NODE_VERSION=10
@@ -16,7 +19,7 @@ install:
 
 script:
   - npm run lib:prod
-  - npm test
+  - CHROMIUM_BIN="/usr/bin/google-chrome" npm test
   - EXAMPLES_SCRIPTS_URL_PREFIX="https://dostaltomas.github.io/angularjs-date-parser" npm run docs:build
 
 deploy:
