--- a/package.json
+++ b/package.json
@@ -30,52 +30,52 @@
         "tsconfig.json"
     ],
     "devDependencies": {
-        "@babel/core": "latest",
-        "@babel/preset-env": "latest",
+        "@babel/core": "^7.8.4",
+        "@babel/preset-env": "^7.8.4",
         "@kpsys/angularjs-register": "latest",
-        "@types/angular": "latest",
+        "@types/angular": "^1.6.57",
         "@types/angular-mocks": "latest",
-        "@types/jasmine": "latest",
-        "@types/luxon": "latest",
-        "@types/node": "latest",
-        "angular": "latest",
-        "angular-mocks": "latest",
-        "babel-loader": "latest",
+        "@types/jasmine": "^3.5.3",
+        "@types/luxon": "^1.21.0",
+        "@types/node": "^13.7.0",
+        "angular": "^1.7.9",
+        "angular-mocks": "^1.7.9",
+        "babel-loader": "^8.0.6",
         "babel-plugin-angularjs-annotate": "latest",
-        "clean-webpack-plugin": "latest",
-        "dgeni": "latest",
+        "clean-webpack-plugin": "^3.0.0",
+        "dgeni": "^0.4.12",
         "dgeni-alive": "latest",
-        "grunt": "latest",
+        "grunt": "^1.0.4",
         "grunt-cli": "latest",
         "grunt-contrib-copy": "latest",
         "grunt-contrib-watch": "latest",
-        "grunt-extract-comments": "latest",
-        "http-server": "latest",
+        "grunt-extract-comments": "^1.1.0",
+        "http-server": "^0.12.1",
         "istanbul": "latest",
         "istanbul-instrumenter-loader": "latest",
-        "jasmine": "latest",
-        "jasmine-core": "latest",
-        "karma": "latest",
-        "karma-chrome-launcher": "latest",
+        "jasmine": "^3.5.0",
+        "jasmine-core": "^3.5.0",
+        "karma": "^4.4.1",
+        "karma-chrome-launcher": "^3.1.0",
         "karma-cli": "latest",
-        "karma-coverage-istanbul-reporter": "latest",
-        "karma-jasmine": "latest",
+        "karma-coverage-istanbul-reporter": "^2.1.1",
+        "karma-jasmine": "3.0.3",
         "karma-source-map-support": "latest",
         "karma-sourcemap-loader": "latest",
         "karma-spec-reporter": "latest",
-        "karma-webpack": "^4.0.0-rc.6",
-        "luxon": "latest",
+        "karma-webpack": "^4.0.2",
+        "luxon": "^1.22.0",
         "source-map-loader": "latest",
-        "ts-loader": "latest",
-        "tslint": "latest",
+        "ts-loader": "^6.2.1",
+        "tslint": "^6.0.0",
         "tslint-loader": "latest",
-        "typescript": "latest",
+        "typescript": "^3.7.5",
         "unminified-webpack-plugin": "latest",
-        "webpack": "latest",
-        "webpack-cli": "latest",
-        "webpack-dev-server": "latest",
+        "webpack": "^4.41.5",
+        "webpack-cli": "^3.3.10",
+        "webpack-dev-server": "^3.10.3",
         "webpack-shell-plugin": "latest",
-        "write-file-webpack-plugin": "latest"
+        "write-file-webpack-plugin": "^4.5.1"
     },
     "scripts": {
         "lib:prod": "webpack --config webpack.library.config.js --mode production --progress",
