--- a/package.json
+++ b/package.json
@@ -1,89 +1,98 @@
 {
-    "name": "@kpsys/angularjs-date-parser",
-    "version": "1.2.0",
-    "author": {
-        "email": "tomas.dostal@kpsys.cz",
-        "name": "Tomas Dostal"
-    },
-    "browserslist": [
-        "last 2 versions and > 1% and not ie < 11"
-    ],
-    "description": "Date parser directive for AngularJS",
-    "repository": "https://github.com/kp-sys/angularjs-date-parser.git",
-    "peerDependencies": {
-        "angular": "1.7.x",
-        "luxon": "1.x",
-        "@kpsys/angularjs-register": "1.x"
-    },
-    "main": "dist/angularjs-date-parser.min.js",
-    "license": "MIT",
-    "publishConfig": {
-        "access": "public"
-    },
-    "directories": {
-        "lib": "src/"
-    },
-    "files": [
-        "dist/",
-        "src/",
-        "webpack.library.config.js",
-        "tsconfig.json"
-    ],
-    "devDependencies": {
-        "@babel/core": "^7.8.4",
-        "@babel/preset-env": "^7.8.4",
-        "@kpsys/angularjs-register": "latest",
-        "@types/angular": "^1.6.57",
-        "@types/angular-mocks": "latest",
-        "@types/jasmine": "^3.5.3",
-        "@types/luxon": "^1.21.0",
-        "@types/node": "^13.7.0",
-        "angular": "^1.7.9",
-        "angular-mocks": "^1.7.9",
-        "babel-loader": "^8.0.6",
-        "babel-plugin-angularjs-annotate": "latest",
-        "clean-webpack-plugin": "^3.0.0",
-        "dgeni": "^0.4.12",
-        "dgeni-alive": "latest",
-        "grunt": "^1.0.4",
-        "grunt-cli": "latest",
-        "grunt-contrib-copy": "latest",
-        "grunt-contrib-watch": "latest",
-        "grunt-extract-comments": "^1.1.0",
-        "http-server": "^0.12.1",
-        "istanbul": "latest",
-        "istanbul-instrumenter-loader": "latest",
-        "jasmine": "^3.5.0",
-        "jasmine-core": "^3.5.0",
-        "karma": "^4.4.1",
-        "karma-chrome-launcher": "^3.1.0",
-        "karma-cli": "latest",
-        "karma-coverage-istanbul-reporter": "^2.1.1",
-        "karma-jasmine": "3.0.3",
-        "karma-source-map-support": "latest",
-        "karma-sourcemap-loader": "latest",
-        "karma-spec-reporter": "latest",
-        "karma-webpack": "^4.0.2",
-        "luxon": "^1.22.0",
-        "source-map-loader": "latest",
-        "ts-loader": "^6.2.1",
-        "tslint": "^6.0.0",
-        "tslint-loader": "latest",
-        "typescript": "^3.7.5",
-        "unminified-webpack-plugin": "latest",
-        "webpack": "^4.41.5",
-        "webpack-cli": "^3.3.10",
-        "webpack-dev-server": "^3.10.3",
-        "webpack-shell-plugin": "latest",
-        "write-file-webpack-plugin": "^4.5.1"
-    },
-    "scripts": {
-        "lib:prod": "webpack --config webpack.library.config.js --mode production --progress",
-        "lib:devel": "webpack --config webpack.library.config.js --mode development --watch --progress",
-        "lib:profile": "webpack --config webpack.library.config.js --mode production --progress --profiloe --json > reports/build-statistics.json",
-        "docs:build": "grunt docs:build",
-        "docs:watch": "grunt docs:watch",
-        "docs:serve": "http-server dist/docs -p 3001 ",
-        "test": "karma start test/karma.conf.js"
-    }
+  "name": "@kpsys/angularjs-date-parser",
+  "version": "2.0.0",
+  "author": {
+    "email": "tomas.dostal@kpsys.cz",
+    "name": "Tomas Dostal"
+  },
+  "browserslist": [
+    "last 2 versions and > 1% and not ie < 11"
+  ],
+  "description": "Date parser directive for AngularJS",
+  "repository": "https://github.com/kp-sys/angularjs-date-parser.git",
+  "peerDependencies": {
+    "angular": "1.7.x",
+    "luxon": "1.x",
+    "@kpsys/angularjs-register": "1.x"
+  },
+  "main": "dist/angularjs-date-parser.min.js",
+  "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
+  "directories": {
+    "lib": "src/"
+  },
+  "files": [
+    "dist/",
+    "src/",
+    "webpack.library.config.js",
+    "tsconfig.json"
+  ],
+  "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/runtime": "^7.10.3",
+    "@kpsys/angularjs-register": "latest",
+    "@types/angular": "^1.6.57",
+    "@types/angular-mocks": "latest",
+    "@types/jasmine": "^3.5.3",
+    "@types/luxon": "^1.21.0",
+    "@types/node": "^13.7.0",
+    "@types/webpack": "^4.41.17",
+    "@types/webpack-env": "latest",
+    "angular": "^1.7.9",
+    "angular-mocks": "^1.7.9",
+    "bind-decorator": "^1.0.11",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-angularjs-annotate": "latest",
+    "clean-webpack-plugin": "^3.0.0",
+    "dgeni": "^0.4.12",
+    "dgeni-alive": "latest",
+    "grunt": "^1.0.4",
+    "grunt-cli": "latest",
+    "grunt-contrib-copy": "latest",
+    "grunt-contrib-watch": "latest",
+    "grunt-extract-comments": "^1.1.0",
+    "http-server": "^0.12.1",
+    "istanbul": "latest",
+    "istanbul-instrumenter-loader": "latest",
+    "jasmine": "^3.5.0",
+    "jasmine-core": "^3.5.0",
+    "karma": "^4.4.1",
+    "html-webpack-plugin": "latest",
+    "html-loader": "^0.5.5",
+    "pug-html-loader": "latest",
+    "mini-css-extract-plugin": "^0.9.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-cli": "latest",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
+    "karma-jasmine": "3.0.3",
+    "karma-source-map-support": "latest",
+    "karma-sourcemap-loader": "latest",
+    "karma-spec-reporter": "latest",
+    "karma-webpack": "^4.0.2",
+    "luxon": "^1.25.0",
+    "source-map-loader": "latest",
+    "ts-loader": "^6.2.1",
+    "tslint": "^6.1.3",
+    "tslint-loader": "latest",
+    "typescript": "^4.0.2",
+    "unminified-webpack-plugin": "latest",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.3",
+    "webpack-shell-plugin": "latest",
+    "write-file-webpack-plugin": "^4.5.1"
+  },
+  "scripts": {
+    "lib:prod": "webpack --config webpack.library.config.js --mode production --progress",
+    "lib:devel": "webpack --config webpack.library.config.js --mode development --watch --progress",
+    "lib:profile": "webpack --config webpack.library.config.js --mode production --progress --profiloe --json > reports/build-statistics.json",
+    "demo": "webpack-dev-server --config webpack.demo.config.js --progress",
+    "docs:build": "grunt docs:build",
+    "docs:watch": "grunt docs:watch",
+    "docs:serve": "http-server dist/docs -p 3001 ",
+    "test": "karma start test/karma.conf.js"
+  }
 }
