--- a/.github/workflows/build_master.yml
+++ b/.github/workflows/build_master.yml
@@ -54,3 +54,17 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist/docs
+
+  publish-npm:
+    runs-on: ubuntu-latest
+    needs: [build, tests]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/download-artifact@v2
+        with:
+          name: build
+
+      - uses: cycjimmy/semantic-release-action@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOMAS3_PERSONAL_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
